# pyd2s

./: .gitignore  makefile  pyproject.toml  utilities.py
pyd2s/: Attributes.py  BitIO.py  Game.py  Items.py  MagicalProperties.py  Storage.py  __init__.py  __main__.py  backup.py  constants.py  copy_item.py  decorators.py  main.py  restore.py  utilities.py
tests/: conftest.py  test_checksum.py  test_game.py  test_items.py
